--- a/themes/hyde/layouts/_default/single.html
+++ b/themes/hyde/layouts/_default/single.html
@@ -6,7 +6,6 @@
 		<div class="content container">
 			<div class="post">
 			 	<h1>{{ .Title }}</h1>
-			  <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
 			      {{ .Content }}
 			</div>
 
@@ -15,6 +14,8 @@
 				{{ partial "disqus" . }}
 			{{ end }}
 		</div>
+
+		{{ partial "footer.html" . }}
 
   </body>
 </html>
