NXBT-986: Update images paths, add tracker

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
 <header>
-  <a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}nuxeo.png"></a>
+  <a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}images/nuxeo.png"></a>
   <span>{{ .Site.Params.description }}</span>
 </header>
