--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,22 +1,19 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <ul class="sidebar-nav">
-
       <li>
-        <a href="{{ .Site.BaseURL }}about/">About</a>
-      </li>
-      <li>
-        <a href="{{ .Site.BaseURL }}infra/">Infrastructure</a>
-      </li>
-      <li>
-        Results
         <ul>
           <li><a href="{{ .Site.BaseURL }}milestone/">Milestones</a></li>
           <li><a href="{{ .Site.BaseURL }}continuous/">Continuous</a></li>
           <li><a href="{{ .Site.BaseURL }}misc/">Misc</a></li>
         </ul>
       </li>
+      <li>
+        <a href="{{ .Site.BaseURL }}infra/">Infrastructure</a>
+      </li>
+      <li>
+        <a href="{{ .Site.BaseURL }}glossary/">Glossary</a>
+      </li>
     </ul>
-    <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{.Now.Format "2006"}}. All rights reserved. {{end}}</p>
   </div>
 </div>
