--- a/themes/hyde/static/css/poole.css
+++ b/themes/hyde/static/css/poole.css
@@ -59,21 +59,21 @@ html {
 }
 
 body {
-  color: #515151;
-  background-color: #fff;
+  color: #333e49;
+  background: linear-gradient(#f4f8fb, #fff);
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #268bd2;
+  color: #0079b3;
   text-decoration: none;
 }
 /* `:focus` is linked to `:hover` for basic accessibility */
 a:hover,
 a:focus {
-  text-decoration: underline;
+  color: #00adff;
 }
 
 /* Headings */
@@ -81,7 +81,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
   font-weight: bold;
   line-height: 1.25;
-  color: #313131;
+  color: #213f7d;
   text-rendering: optimizeLegibility;
 }
 h1 {
@@ -152,8 +152,8 @@ pre {
 code {
   padding: .25em .5em;
   font-size: 85%;
-  color: #bf616a;
-  background-color: #f9f9f9;
+  color: #861000;
+  background-color: #f1f1f1;
   border-radius: 3px;
 }
 pre {
@@ -211,17 +211,18 @@ img {
 table {
   margin-bottom: 1rem;
   width: 100%;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #e3e8f0;
   border-collapse: collapse;
+  background-color: #fff;
 }
 td,
 th {
   padding: .25rem .5rem;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #e3e8f0;
 }
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
-  background-color: #f9f9f9;
+  background-color: #f3f6fa;
 }
 
 
