--- a/themes/hyde/layouts/partials/head.html
+++ b/themes/hyde/layouts/partials/head.html
@@ -23,8 +23,7 @@ analytics.page()
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/poole.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/hyde.css">
-  <link href='https://fonts.googleapis.com/
-  css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ .Site.BaseURL }}images/apple-touch-icon-144-precomposed.png">
