--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -6,7 +6,7 @@
 
 <div class="content container">
   <div class="post">
-    <h1>{{ (index .Site.Data.bench $data).benchname }} - {{ (index .Site.Data.bench $data).dbprofile }}</h1>
+    <h1>{{ (index .Site.Data.bench $data).benchname }} <span class="tag {{ (index .Site.Data.bench $data).dbprofile }}">{{ (index .Site.Data.bench $data).dbprofile }}</span></h1>
     {{ .Content }}
     <h2>Configuration</h2>
     <dl>
@@ -52,10 +52,10 @@
       <dt>Documents created per second</dt>
       <dd>{{ (index .Site.Data.bench $data).create_rps }}</dd>
       <dt>Response time in ms</dt>
-      <dd>Average: {{ (index .Site.Data.bench $data).create_avg }} (+/- {{ (index .Site.Data.bench $data).create_std }})<br>
-        min: {{ (index .Site.Data.bench $data).create_min }}<br>
-        p50: {{ (index .Site.Data.bench $data).create_p50 }}<br>
-        p95: {{ (index .Site.Data.bench $data).create_p95 }}
+      <dd>Average: {{ (index .Site.Data.bench $data).create_avg }} <span class="stddev">{{ (index .Site.Data.bench $data).create_std }}</span><br>
+        <div class="pill"><span>min</span>{{ (index .Site.Data.bench $data).create_min }}</div>
+        <div class="pill"><span>p50</span>{{ (index .Site.Data.bench $data).create_p50 }}</div>
+        <div class="pill"><span>p95</span>{{ (index .Site.Data.bench $data).create_p95 }}</div>
       </dd>
       <dt>Percent of error</dt>
       <dd>{{ (index .Site.Data.bench $data).create_percentError }}</dd>
@@ -76,10 +76,10 @@
       <dt>Request per seconds</dt>
       <dd>{{ (index .Site.Data.bench $data).nav_rps }}</dd>
       <dt>Response time in ms</dt>
-      <dd>Average: {{ (index .Site.Data.bench $data).nav_avg }} (+/- {{ (index .Site.Data.bench $data).nav_std }})<br>
-        min: {{ (index .Site.Data.bench $data).nav_min }}<br>
-        p50: {{ (index .Site.Data.bench $data).nav_p50 }}<br>
-        p95: {{ (index .Site.Data.bench $data).nav_p95 }}
+      <dd>Average: {{ (index .Site.Data.bench $data).nav_avg }} <span class="stddev">{{ (index .Site.Data.bench $data).nav_std }}</span><br>
+        <div class="pill"><span>min</span>{{ (index .Site.Data.bench $data).nav_min }}</div>
+        <div class="pill"><span>p50</span>{{ (index .Site.Data.bench $data).nav_p50 }}</div>
+        <div class="pill"><span>p95</span>{{ (index .Site.Data.bench $data).nav_p95 }}</div>
       </dd>
       <dt>Percent of error</dt>
       <dd>{{ (index .Site.Data.bench $data).nav_percentError }}</dd>
@@ -100,10 +100,10 @@
       <dt>Request per seconds</dt>
       <dd>{{ (index .Site.Data.bench $data).navjsf_rps }}</dd>
       <dt>Response time in ms</dt>
-      <dd>Average: {{ (index .Site.Data.bench $data).navjsf_avg }} (+/- {{ (index .Site.Data.bench $data).navjsf_std }})<br>
-        min: {{ (index .Site.Data.bench $data).navjsf_min }}<br>
-        p50: {{ (index .Site.Data.bench $data).navjsf_p50 }}<br>
-        p95: {{ (index .Site.Data.bench $data).navjsf_p95 }}
+      <dd>Average: {{ (index .Site.Data.bench $data).navjsf_avg }} <span class="stddev">{{ (index .Site.Data.bench $data).navjsf_std }}</span><br>
+        <div class="pill"><span>min</span>{{ (index .Site.Data.bench $data).navjsf_min }}</div>
+        <div class="pill"><span>p50</span>{{ (index .Site.Data.bench $data).navjsf_p50 }}</div>
+        <div class="pill"><span>p95</span>{{ (index .Site.Data.bench $data).navjsf_p95 }}</div>
       </dd>
       <dt>Concurrency</dt>
       <dd>{{ (index .Site.Data.bench $data).navjsf_user }}</dd>
@@ -124,10 +124,10 @@
       <dt>Request per seconds</dt>
       <dd>{{ (index .Site.Data.bench $data).update_rps }}</dd>
       <dt>Response time in ms</dt>
-      <dd>Average: {{ (index .Site.Data.bench $data).update_avg }} (+/- {{ (index .Site.Data.bench $data).update_std }})<br>
-        min: {{ (index .Site.Data.bench $data).update_min }}<br>
-        p50: {{ (index .Site.Data.bench $data).update_p50 }}<br>
-        p95: {{ (index .Site.Data.bench $data).update_p95 }}
+      <dd>Average: {{ (index .Site.Data.bench $data).update_avg }} <span class="stddev">{{ (index .Site.Data.bench $data).update_std }}</span><br>
+        <div class="pill"><span>min</span>{{ (index .Site.Data.bench $data).update_min }}</div>
+        <div class="pill"><span>p50</span>{{ (index .Site.Data.bench $data).update_p50 }}</div>
+        <div class="pill"><span>p95</span>{{ (index .Site.Data.bench $data).update_p95 }}</div>
       </dd>
       <dt>Concurrency</dt>
       <dd>{{ (index .Site.Data.bench $data).update_user }}</dd>
@@ -148,10 +148,10 @@
       <dt>Request per seconds</dt>
       <dd>{{ (index .Site.Data.bench $data).crud_rps }}</dd>
       <dt>Response time in ms</dt>
-      <dd>Average: {{ (index .Site.Data.bench $data).crud_avg }} (+/- {{ (index .Site.Data.bench $data).crud_std }})<br>
-        min: {{ (index .Site.Data.bench $data).crud_min }}<br>
-        p50: {{ (index .Site.Data.bench $data).crud_p50 }}<br>
-        p95: {{ (index .Site.Data.bench $data).crud_p95 }}
+      <dd>Average: {{ (index .Site.Data.bench $data).crud_avg }} <span class="stddev">{{ (index .Site.Data.bench $data).crud_std }}</span><br>
+        <div class="pill"><span>min</span>{{ (index .Site.Data.bench $data).crud_min }}</div>
+        <div class="pill"><span>p50</span>{{ (index .Site.Data.bench $data).crud_p50 }}</div>
+        <div class="pill"><span>p95</span>{{ (index .Site.Data.bench $data).crud_p95 }}</div>
       </dd>
       <dt>Concurrency</dt>
       <dd>{{ (index .Site.Data.bench $data).crud_user }}</dd>
@@ -172,10 +172,10 @@
       <dt>Request per seconds</dt>
       <dd>{{ (index .Site.Data.bench $data).bench_rps }}</dd>
       <dt>Response time in ms</dt>
-      <dd>Average: {{ (index .Site.Data.bench $data).bench_avg }} (+/- {{ (index .Site.Data.bench $data).bench_std }})<br>
-        min: {{ (index .Site.Data.bench $data).bench_min }}<br>
-        p50: {{ (index .Site.Data.bench $data).bench_p50 }}<br>
-        p95: {{ (index .Site.Data.bench $data).bench_p95 }}
+      <dd>Average: {{ (index .Site.Data.bench $data).bench_avg }} <span class="stddev">{{ (index .Site.Data.bench $data).bench_std }}</span>
+        <div class="pill"><span>min</span>{{ (index .Site.Data.bench $data).bench_min }}</div>
+        <div class="pill"><span>p50</span>{{ (index .Site.Data.bench $data).bench_p50 }}</div>
+        <div class="pill"><span>p95</span>{{ (index .Site.Data.bench $data).bench_p95 }}</div>
       </dd>
       <dt>Percent of error</dt>
       <dd>{{ (index .Site.Data.bench $data).bench_percentError }}</dd>
