--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
   </div>
   <div class="flex-ctn">
     <div class="flex-itm">
-      <img src="{{ .Site.BaseURL }}images/corg.png" />
+      <img src="{{ .Site.BaseURL }}images/chart2.png" />
       <div class="tag">12123</div>
       <div class="detail">details about that number</div>
     </div>
@@ -22,7 +22,7 @@
       <div class="detail">details about that number</div>
     </div>
     <div class="flex-itm">
-      <img src="{{ .Site.BaseURL }}images/chart.png" />
+      <img src="{{ .Site.BaseURL }}images/mug.png" />
       <div class="tag">12123</div>
       <div class="detail">details about that number</div>
     </div>
