--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -492,25 +492,30 @@ table.result th {
   display: inline-block;
   background-color: #434343;
   color: #fff;
-  font-weight: 700;
+  font-weight: 300;
+  letter-spacing: 0.02rem;
   font-size: .9rem;
   border-radius: .2rem;
   padding: .02rem .5rem .1rem;
 }
 
-.row.mongodb .tag {
+.row.mongodb .tag,
+.mongodb.tag {
   background-color: #457430;
 }
 
-.row.oracle12c .tag {
+.row.oracle12c .tag,
+.oracle12c.tag {
   background-color: #11666b;
 }
 
-.row.mssql .tag {
+.row.mssql .tag,
+.mssql.tag {
   background-color: #673a79;
 }
 
-.row.pgsql .tag {
+.row.pgsql .tag,
+.pgsql.tag {
   background-color: #7a333d;
 }
 
@@ -519,14 +524,59 @@ table.result th {
   background-color: #00adff;
 }
 
+h1 .tag {
+  font-size: 1.1rem;
+  vertical-align: middle;
+}
+
 .flex-itm .tag {
   margin: .5rem auto;
 }
 
+dl {
+  border: 1px solid #eee;
+  border-radius: .2rem;
+  background-color: #fff;
+  padding: .5rem .5rem 0;
+}
 
+dd .stddev {
+  font-size: .85rem;
+}
+
+.pill {
+  border: 1px solid #eee;
+  border-radius: .2rem;
+  background-color: #fff;
+  padding: 0 .3rem 0 0;
+  display: inline-block;
+  font-size: .85rem;
+}
+
+.pill span {
+  border-right: 1px solid #eee;
+  background-color: #f8f9f9;
+  padding: 0 .3rem 0;
+  margin: 0 .3rem 0 0;
+}
 
 @media (min-width: 48em) {
   .flex-ctn {
   flex-direction: row;
+  }
+  .post dt, .post dd {
+    display: inline-block;
+    vertical-align: top;
+    min-height: 1.35rem;
+  }
+  .post dt {
+    width: 35%;
+    border-right: 2px solid #eee;
+    margin-bottom: .5rem;
+    background-color: #f6f7f8;
+    padding: 0 0 0 .5rem;
+  }
+  .post dd {
+    width: 64%;
   }
 }
