--- a/themes/hyde/static/css/poole.css
+++ b/themes/hyde/static/css/poole.css
@@ -117,11 +117,15 @@ ul, ol, dl {
   margin-bottom: 1rem;
 }
 
+dl {
+  margin-top: 1rem;
+}
+
 dt {
   font-weight: bold;
 }
 dd {
-  margin-bottom: .5rem;
+  margin: 0 0 .5rem;
 }
 
 /* Misc */
