NXBT-986: Add date time back on bench report page

--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -7,6 +7,7 @@
 <div class="content container">
   <div class="post">
     <h1>{{ (index .Site.Data.bench $data).benchname }} <span class="tag {{ (index .Site.Data.bench $data).dbprofile }}">{{ (index .Site.Data.bench $data).dbprofile }}</span></h1>
+    <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
     {{ .Content }}
     <h2>Configuration</h2>
     <dl>
