NXBT-986: Add back colon for readability on stats

--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -554,9 +554,8 @@ dd .stddev {
 }
 
 .pill span {
-  border-right: 1px solid #eee;
   background-color: #f8f9f9;
-  padding: 0 .3rem 0;
+  padding: 0 .2rem 0 .3rem;
   margin: 0 .3rem 0 0;
 }
 
