--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -54,9 +54,9 @@
       <dd>{{ (index .Site.Data.bench $data).create_rps }}</dd>
       <dt>Response time in ms</dt>
       <dd>Average: {{ (index .Site.Data.bench $data).create_avg }} <span class="stddev">{{ (index .Site.Data.bench $data).create_std }}</span><br>
-        <div class="pill"><span>min</span>{{ (index .Site.Data.bench $data).create_min }}</div>
-        <div class="pill"><span>p50</span>{{ (index .Site.Data.bench $data).create_p50 }}</div>
-        <div class="pill"><span>p95</span>{{ (index .Site.Data.bench $data).create_p95 }}</div>
+        <div class="pill"><span>min:</span>{{ (index .Site.Data.bench $data).create_min }}</div>
+        <div class="pill"><span>p50:</span>{{ (index .Site.Data.bench $data).create_p50 }}</div>
+        <div class="pill"><span>p95:</span>{{ (index .Site.Data.bench $data).create_p95 }}</div>
       </dd>
       <dt>Percent of error</dt>
       <dd>{{ (index .Site.Data.bench $data).create_percentError }}</dd>
@@ -78,9 +78,9 @@
       <dd>{{ (index .Site.Data.bench $data).nav_rps }}</dd>
       <dt>Response time in ms</dt>
       <dd>Average: {{ (index .Site.Data.bench $data).nav_avg }} <span class="stddev">{{ (index .Site.Data.bench $data).nav_std }}</span><br>
-        <div class="pill"><span>min</span>{{ (index .Site.Data.bench $data).nav_min }}</div>
-        <div class="pill"><span>p50</span>{{ (index .Site.Data.bench $data).nav_p50 }}</div>
-        <div class="pill"><span>p95</span>{{ (index .Site.Data.bench $data).nav_p95 }}</div>
+        <div class="pill"><span>min:</span>{{ (index .Site.Data.bench $data).nav_min }}</div>
+        <div class="pill"><span>p50:</span>{{ (index .Site.Data.bench $data).nav_p50 }}</div>
+        <div class="pill"><span>p95:</span>{{ (index .Site.Data.bench $data).nav_p95 }}</div>
       </dd>
       <dt>Percent of error</dt>
       <dd>{{ (index .Site.Data.bench $data).nav_percentError }}</dd>
@@ -102,9 +102,9 @@
       <dd>{{ (index .Site.Data.bench $data).navjsf_rps }}</dd>
       <dt>Response time in ms</dt>
       <dd>Average: {{ (index .Site.Data.bench $data).navjsf_avg }} <span class="stddev">{{ (index .Site.Data.bench $data).navjsf_std }}</span><br>
-        <div class="pill"><span>min</span>{{ (index .Site.Data.bench $data).navjsf_min }}</div>
-        <div class="pill"><span>p50</span>{{ (index .Site.Data.bench $data).navjsf_p50 }}</div>
-        <div class="pill"><span>p95</span>{{ (index .Site.Data.bench $data).navjsf_p95 }}</div>
+        <div class="pill"><span>min:</span>{{ (index .Site.Data.bench $data).navjsf_min }}</div>
+        <div class="pill"><span>p50:</span>{{ (index .Site.Data.bench $data).navjsf_p50 }}</div>
+        <div class="pill"><span>p95:</span>{{ (index .Site.Data.bench $data).navjsf_p95 }}</div>
       </dd>
       <dt>Concurrency</dt>
       <dd>{{ (index .Site.Data.bench $data).navjsf_user }}</dd>
@@ -126,9 +126,9 @@
       <dd>{{ (index .Site.Data.bench $data).update_rps }}</dd>
       <dt>Response time in ms</dt>
       <dd>Average: {{ (index .Site.Data.bench $data).update_avg }} <span class="stddev">{{ (index .Site.Data.bench $data).update_std }}</span><br>
-        <div class="pill"><span>min</span>{{ (index .Site.Data.bench $data).update_min }}</div>
-        <div class="pill"><span>p50</span>{{ (index .Site.Data.bench $data).update_p50 }}</div>
-        <div class="pill"><span>p95</span>{{ (index .Site.Data.bench $data).update_p95 }}</div>
+        <div class="pill"><span>min:</span>{{ (index .Site.Data.bench $data).update_min }}</div>
+        <div class="pill"><span>p50:</span>{{ (index .Site.Data.bench $data).update_p50 }}</div>
+        <div class="pill"><span>p95:</span>{{ (index .Site.Data.bench $data).update_p95 }}</div>
       </dd>
       <dt>Concurrency</dt>
       <dd>{{ (index .Site.Data.bench $data).update_user }}</dd>
@@ -150,9 +150,9 @@
       <dd>{{ (index .Site.Data.bench $data).crud_rps }}</dd>
       <dt>Response time in ms</dt>
       <dd>Average: {{ (index .Site.Data.bench $data).crud_avg }} <span class="stddev">{{ (index .Site.Data.bench $data).crud_std }}</span><br>
-        <div class="pill"><span>min</span>{{ (index .Site.Data.bench $data).crud_min }}</div>
-        <div class="pill"><span>p50</span>{{ (index .Site.Data.bench $data).crud_p50 }}</div>
-        <div class="pill"><span>p95</span>{{ (index .Site.Data.bench $data).crud_p95 }}</div>
+        <div class="pill"><span>min:</span>{{ (index .Site.Data.bench $data).crud_min }}</div>
+        <div class="pill"><span>p50:</span>{{ (index .Site.Data.bench $data).crud_p50 }}</div>
+        <div class="pill"><span>p95:</span>{{ (index .Site.Data.bench $data).crud_p95 }}</div>
       </dd>
       <dt>Concurrency</dt>
       <dd>{{ (index .Site.Data.bench $data).crud_user }}</dd>
@@ -174,9 +174,9 @@
       <dd>{{ (index .Site.Data.bench $data).bench_rps }}</dd>
       <dt>Response time in ms</dt>
       <dd>Average: {{ (index .Site.Data.bench $data).bench_avg }} <span class="stddev">{{ (index .Site.Data.bench $data).bench_std }}</span>
-        <div class="pill"><span>min</span>{{ (index .Site.Data.bench $data).bench_min }}</div>
-        <div class="pill"><span>p50</span>{{ (index .Site.Data.bench $data).bench_p50 }}</div>
-        <div class="pill"><span>p95</span>{{ (index .Site.Data.bench $data).bench_p95 }}</div>
+        <div class="pill"><span>min:</span>{{ (index .Site.Data.bench $data).bench_min }}</div>
+        <div class="pill"><span>p50:</span>{{ (index .Site.Data.bench $data).bench_p50 }}</div>
+        <div class="pill"><span>p95:</span>{{ (index .Site.Data.bench $data).bench_p95 }}</div>
       </dd>
       <dt>Percent of error</dt>
       <dd>{{ (index .Site.Data.bench $data).bench_percentError }}</dd>
