--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
 
 <div class="content container fullspace">
   <div class="intro">
-    <p>Nuxeo Platform has a distributed architecture. It is compatible with a wide range of backends. Hence there is many options for addressing your scalability requirements.  From simple and small deployments to  billion records repositories, how Nuxeo Platform behaves ? Awesome [cloud automation|https://github.com/nuxeo/nuxeo-bench] helps us answering that question: Nuxeo Platform rocks ! Just have a tour on our per-release benchmarks, continuous ones and extra special ones. Compare, learn the architectures, and give feedback!</p>
+    <p>Nuxeo Platform has a distributed architecture. It is compatible with a wide range of backends. Hence there is many options for addressing your scalability requirements.  From simple and small deployments to  billion records repositories, how Nuxeo Platform behaves ? Awesome [cloud automation](https://github.com/nuxeo/nuxeo-bench) helps us answering that question: Nuxeo Platform rocks ! Just have a tour on our per-release benchmarks, continuous ones and extra special ones. Compare, learn the architectures, and give feedback!</p>
   </div>
   <div>
     <h3>Current pref</h3>
