--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,19 +7,20 @@
   <div class="intro">
   <p>Nuxeo Platform has a distributed architecture. It is compatible with a wide range of backends. Hence there is many options for addressing your scalability requirements.  From simple and small deployments to  billion records repositories, how Nuxeo Platform behaves? Awesome <a href="https://github.com/nuxeo/nuxeo-bench" target="blank">cloud automation</a> helps us answering that question: Nuxeo Platform rocks!  Just have a tour on our per-release benchmarks, continuous ones and extra-special ones.  Watch figures, compare, learn the architectures, and give feedback!</p>
   </div>
-  <div>
-    <h3>If you had only those figures to remember...</h3>
-  </div>
+  
   <div class="flex-ctn">
+<div class="flex-itm">
+   <h1>If you had only those figures to remember...</h1>
+  </div>
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/power.png" />
       <div class="tag">1,000,000,000</div>
-      <div class="detail">That's the maximum number of documents stored in a Nuxeo Platform instance. Read the details on the <a href="http://www.nuxeo.com/blog/one-billion-documents/" target="blank">Nuxeo Blog</a> and stay tuned, we now are targetting ten billions!</div>
+      <div class="detail">That's the greatest number of documents ever stored in a Nuxeo Platform instance so far. Read the details on the <a href="http://www.nuxeo.com/blog/one-billion-documents/" target="blank">Nuxeo Blog</a> and stay tuned, we now are targetting ten billions!</div>
     </div>
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/power.png" />
       <div class="tag">6000 req/s</div>
-      <div class="detail">On a business scenario mix read and write calls, benchmarking a JavaScript front application hitting Nuxeo Platform server, we reach 6000 requests per seconds. Read the details on the <a href="http://www.nuxeo.com/blog/can-the-nuxeo-platform-scale-to-the-next-level-again-yes/" target="blank"> Nuxeo Blog</a>.</div>
+      <div class="detail">Benchmarking a JavaScript front application hitting Nuxeo Platform server with a mix of read and write requests, we reached 6000 requests per seconds. Read the details on the <a href="http://www.nuxeo.com/blog/can-the-nuxeo-platform-scale-to-the-next-level-again-yes/" target="blank"> Nuxeo Blog</a>.</div>
     </div>
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/power.png" />
