--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -12,7 +12,7 @@
         <a href="{{ .Site.BaseURL }}infra/">Infrastructure</a>
       </li>
       <li>
-        <a href="{{ .Site.BaseURL }}glossary/">Glossary</a>
+        <a href="{{ .Site.BaseURL }}scenarios/">Scenarios</a>
       </li>
     </ul>
   </div>
