--- a/layouts/section/misc.html
+++ b/layouts/section/misc.html
@@ -5,7 +5,7 @@
 
 <div class="content container">
   <h1>Misc Benchmarks results</h1>
-  <div>Miscellaneous Benchmarks results</div>
+  <div>Miscellaneous Benchmarks results. You can click on the link of the first cell on each row to have the complete resultset of the corresponding benchmark.</div>
   <ul class="posts">
     {{ range (.Data.Pages.GroupByParam "benchname").Reverse }}
     <h3>{{ .Key }}</h3>
