read only for 6000 req per sec

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,7 +20,7 @@
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/power.png" />
       <div class="tag">6000 req/s</div>
-      <div class="detail">Benchmarking a JavaScript front application hitting Nuxeo Platform server with a mix of read and write requests, we reached 6000 requests per seconds. Read the details on the <a href="http://www.nuxeo.com/blog/can-the-nuxeo-platform-scale-to-the-next-level-again-yes/" target="blank"> Nuxeo Blog</a>.</div>
+      <div class="detail">Benchmarking a JavaScript front application hitting Nuxeo Platform server, we reached 6000 requests per seconds. Read the details on the <a href="http://www.nuxeo.com/blog/can-the-nuxeo-platform-scale-to-the-next-level-again-yes/" target="blank"> Nuxeo Blog</a>.</div>
     </div>
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/power.png" />
