--- a/layouts/section/misc.html
+++ b/layouts/section/misc.html
@@ -31,7 +31,7 @@
         <div><span>Reindexing</span></div>
       </th>
       <th>
-        <div><span>Build</span></div>
+        <div><span>Detailed View</span></div>
       </th>
       </thead>
       <tbody>
