fixing preview image

--- a/layouts/bench/summary_row.html
+++ b/layouts/bench/summary_row.html
@@ -37,5 +37,5 @@
   <td>
     <div class="dps">{{ (index .Site.Data.bench $data).reindex_dps }}</div>
   </td>
-  <td><a href={{ .Permalink }}><img src="/benchmarks/images/preview.gif"/></a></td>
+  <td><a href={{ .Permalink }}><img src="/images/preview.gif"/></a></td>
 </tr>
